2020-03-17  Davis Vaughan  <davis@rstudio.com>

	* inst/include/Rcpp/lang.h: Inline Rcpp_list6() to support R 3.3.

2020-03-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

        * inst/NEWS.Rd: Updated

2020-03-15  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/exceptions_impl.h: Ensure <execinfo.h> is included
	into global namespace; refactor detection of demangler support

2020-03-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 1.0.4

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * vignettes/rmd/Rcpp.bib: Idem
        * inst/bib/Rcpp.bib: Idem

2020-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/rmd/Rcpp.bib: Updated to current package versions
	* inst/bib/Rcpp.bib: Idem

2020-02-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/exceptions_impl.h: Remove spurious semicolon

2020-02-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/generated/Vector__create.h: Added #nocov tags
	* inst/include/Rcpp/exceptions_impl.h: Idem
	* src/api.cpp: Idem plus some whitespace realignment

2020-02-13  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add a Debian badge

2020-02-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* README.md: Added indirect CRAN use badge

2020-02-09  Joshua Pritikin  <jpritikin@pobox.com>

	* inst/include/Rcpp.h: Include exceptions_impl.h
	* inst/include/Rcpp/exceptions.h: Make thread-safe
	* inst/include/Rcpp/exceptions_impl.h: New home for code moved
	from src/api.cpp

2020-01-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/exceptions.h: A few more #nocov tags
	* inst/include/Rcpp/generated/Vector__create.h: Idem, plus whitespace

2020-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* R/Attributes.R: A few more #nocov tags
